; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/le/extr_lebuffer_sbus.c_lebuffer_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/le/extr_lebuffer_sbus.c_lebuffer_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_TEMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @lebuffer_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lebuffer_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @bus_generic_detach(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = call i64 @device_get_children(i32 %8, i32** %3, i32* %5)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %38

11:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %31, %11
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %34

16:                                               ; preds = %12
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @device_get_ivars(i32 %21)
  %23 = call i32 @lebuffer_destroy_dinfo(i32 %22)
  %24 = load i32, i32* %2, align 4
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @device_delete_child(i32 %24, i32 %29)
  br label %31

31:                                               ; preds = %16
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  br label %12

34:                                               ; preds = %12
  %35 = load i32*, i32** %3, align 8
  %36 = load i32, i32* @M_TEMP, align 4
  %37 = call i32 @free(i32* %35, i32 %36)
  br label %38

38:                                               ; preds = %34, %1
  ret i32 0
}

declare dso_local i32 @bus_generic_detach(i32) #1

declare dso_local i64 @device_get_children(i32, i32**, i32*) #1

declare dso_local i32 @lebuffer_destroy_dinfo(i32) #1

declare dso_local i32 @device_get_ivars(i32) #1

declare dso_local i32 @device_delete_child(i32, i32) #1

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
